vlib/v/checker/tests/comptime_match_value_different_type.out
vlib/v/checker/tests/comptime_match_value_different_type.vv:7:3: error: can not matching a string value(`ast.StringLiteral{
    val: '100'
    pos: token.Pos{
        len: 5
        line_nr: 6
        pos: 92
        col: 2
        file_idx: 43
        last_line: 6
    }
    language: v
    is_raw: false
}`) in a non string type `$match`, `x` type is `int`
    5 |             println('int 100')
    6 |         }
    7 |         '100' {
      |         ~~~~~
    8 |             println('string 100')
    9 |         }
vlib/v/checker/tests/comptime_match_value_different_type.vv:18:3: error: can not matching a string value(`ast.StringLiteral{
    val: '1'
    pos: token.Pos{
        len: 3
        line_nr: 17
        pos: 227
        col: 2
        file_idx: 43
        last_line: 17
    }
    language: v
    is_raw: false
}`) in a non string type `$match`, `$int` type is `int`
   16 |             println('IntegerLiteral')
   17 |         }
   18 |         '1' {
      |         ~~~
   19 |             println('StringLiteral')
   20 |         }
